kubernetes/kubernetes_on-premise/ymal/ingress/ingress2.yaml
# ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
spec:
  ingressClassName: nginx
  rules:
    - host: cloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc3-admin
                port:
                  number: 8080
    - host: "*.cloud.com"
      http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: svc3-admin
                port:
                  number: 8080


# domain 치환
# sed -i "s/cloud.com/$MYDOMAIN/g" ingress2.yaml
